# bw_hestia_bridge

./: .gitignore  .readthedocs.yaml  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package-deploy.yml  python-test.yml
bw_hestia_bridge/: __init__.py  data_preparation.py  importer.py  utils.py
bw_hestia_bridge/data/: ecoinvent_mappings_technosphere.csv
bw_hestia_bridge/hestia_api/: __init__.py  base_api.py  base_data.py  credentials.py  cycle_graph.py  querying.py  related.py
bw_hestia_bridge/strategies/: __init__.py  conversion.py  data_preparation.py  ecoinvent_mappings_biosphere.csv  generic.py  linking.py
bw_hestia_bridge/utils/: __init__.py  config.py
dev/: Test basic functionality.ipynb  create_ecoinvent_mapping_csv.py  example-bananas.jsonld
docs/: api.rst  conf.py  environment.yaml  environment.yml  format.md  index.md  requirements.txt  tutorial.rst  usage.md
docs/content/: format.md  tutorial.md
tests/: __init__.py  conftest.py  test_clean_jsonld.py  test_config.py  test_queries.py
tests/fixtures/: bananas-converted.json  create_converted_fixtures.py  guinea-beef-converted.json  guinea-beef.jsonld  oil-palm-converted.json  oil-palm.jsonld  piggery-converted.json  piggery.jsonld  soybean-converted.json  soybean.jsonld
